gac_sb/objects/GoogleMapSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>APIkey__c</fullName>
        <label>API key</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GeocodeMaxBatch__c</fullName>
        <defaultValue>5</defaultValue>
        <description>Le nombre d&apos;appel de geocodage par transaction</description>
        <inlineHelpText>Le nombre d&apos;appel de geocodage par transaction</inlineHelpText>
        <label>Geocode max batch</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Google Map Settings</label>
</CustomObject>